CodeForces/1092/ERRS
d1.cpp: In function ‘int main()’:
d1.cpp:34:1: error: expected ‘;’ before ‘}’ token
 }
 ^
